--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "Daisy X",
+      "name": "Aira",
       "description": "An Anime themed Telegram group management bot.",
       "keywords": [
          "telegram",
