--- a/app.json
+++ b/app.json
@@ -179,6 +179,6 @@
       "manager",
       "daisy"
    ],
-   "name": "Daisy X",
+   "name": "aira",
    "repository": "https://github.com/Inukaasith/daisy-x"
 }
