--- a/.github/workflows/saint.yml
+++ b/.github/workflows/saint.yml
@@ -8,5 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: git mv SnowGirl DaisyX
+      - run: git mv  aira
       - uses: EndBug/add-and-commit@v5.1.0
